# CXXPython

./: .gitignore  README.md
01/: hello.cpp
02/: my_add.cpp
02/py/: calculate.py
03/: CMakeLists.txt  build.sh  my_student.cpp
03/include/: get.sh  stu.thrift
03/py/: serialize.py  stu_test.py
